# phonon-omega-max

./: .gitignore  Makefile  README.md  make_headline.py  pyproject.toml  score_partial.py
.github/workflows/: ci.yml
configs/: cgcnn.yaml  gbdt.yaml
docs/: data_card.md  methods.md  physics_findings.md  plan.md  spec.md
figures/: leaderboard.md
metrics/: cgcnn_folds.json  cgcnn_summary.json  gbdt_folds.json  gbdt_summary.json
notebooks/: walkthrough.ipynb
phonon_omegamax/: cli.py  sample.py
phonon_omegamax/data/: load.py  split.py
phonon_omegamax/eval/: leaderboard.py  metrics.py  parity.py  run.py
phonon_omegamax/features/: graph.py  magpie.py
phonon_omegamax/models/: cgcnn.py  dataset.py  ensemble.py  gbdt.py  train.py
phonon_omegamax/physics/: analysis.py
scripts/: make_figures.py
tests/: conftest.py  test_cgcnn.py  test_dataset.py  test_ensemble.py  test_gbdt.py  test_graph.py  test_leaderboard.py  test_load.py  test_magpie.py  test_metrics.py  test_parity.py  test_physics.py  test_sample.py  test_smoke.py  test_split.py  test_train.py
tests/fixtures/: structures.py
